--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browserify": "^11.2.0",
     "gulp": "^3.9.0",
-    "gulp-typescript": "^2.9.2",
-    "gulp-uglify": "^1.4.1",
-    "jquery": "^2.1.4",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-typescript": "^2.9.2"
   }
 }
